--- a/web_content/css/lah-desktop.css
+++ b/web_content/css/lah-desktop.css
@@ -344,6 +344,7 @@ smaller {
     font-size: 16pt;
     text-align: left;    
     max-width: 350px;
+    margin-bottom: 2px;
     overflow: hidden;
     white-space: nowrap;
     text-overflow: ellipsis;
@@ -367,6 +368,10 @@ smaller {
 
 #status-area #pending-players:before {
     background-image: url("/img/lah-pending.png");
+}
+
+#status-area #coins:before {
+    background-image: url("/img/lah-coin.png");
 }
 
 /* GAME OVER SCREEN / TROPHIES */
@@ -806,6 +811,55 @@ card[white] {
     background-color: #f6f6f6;
     color: black;
     font-weight: 500;
+}
+
+card .btn-upgrade {
+    position: absolute;
+    left: -6pt;
+    top: -10pt;
+    font-size: 10pt;
+    min-width: 16pt;
+    border-radius: 6px;
+    border: 2px solid var(--accent-ol);
+    color: white;
+    background: black;
+    padding: 2px 3px;
+    z-index: 9999;
+    transition: background-color .4s;
+}
+
+card .btn-upgrade:hover {
+    background-color: #454545;
+}
+
+card .btn-upgrade.nope {
+    background-color: red;
+}
+
+.icon-coin {
+    display: inline-block;
+    width: 1em;
+    height: 1em;
+    background-image: url("/img/lah-coin-inv.png");
+    background-size: 95% 95%;
+    background-repeat: no-repeat;
+    transform: translateY(.15em);
+}
+
+#hand-area card[data-upgrade]:not([data-tier]) {
+    color: #0044aa;
+}
+
+#hand-area card[data-tier="1"] {
+    color: #7f4321;
+}
+
+#hand-area card[data-tier="2"] {
+    color: #777798;
+}
+
+#hand-area card[data-tier="3"] {
+    color: #cf6024;
 }
 
 card[data-card="blank"] > .blank-card-text-container {
