--- a/web_content/css/lah-common.css
+++ b/web_content/css/lah-common.css
@@ -202,6 +202,13 @@ span.highlight {
     }
 }
 
+@keyframes collapse {
+    90% {
+        transform: rotate(90deg) scale(0);
+        opacity: 0;
+    }
+}
+
 /* WIN SPIN ANIMATION */
 
 .lah-stage-round-end #play-cards-area .card-group.winner {
