Small bugfixes, new cards

--- a/web_content/css/lah-mobile.css
+++ b/web_content/css/lah-mobile.css
@@ -736,16 +736,28 @@
     
     card .pick {
         position: absolute;
-        font-size: 0.75em;
-        right: 1.45rem;
-        bottom: 2rem;
+        font-size: .75em;
+        right: 1.75em;
+        bottom: 2em;
+    }
+
+    card .draw {
+        position: absolute;
+        font-size: .75em;
+        left: 3.5em;
+        bottom: 2em;
+        transition: opacity .35s;
     }
     
     card .pick::before {
         content: "PICK ";
     }
+
+    card .draw::before {
+        content: "DRAW ";
+    }
     
-    card .pick .num {
+    card .pick .num, card .draw .num {
         color: black;
         display: inline-block;
         text-align: center;
@@ -756,8 +768,8 @@
         border: 2px solid white;
         border-radius: 100%;
         padding: 1px 1px 1px 0px;
-        min-width: .9em;
-        height: .9em;
+        min-width: .8em;
+        height: .8em;
         white-space: nowrap;
         box-sizing: initial !important;
     }
@@ -844,6 +856,41 @@
 
     card .btn-discard:hover {
         background-color: rgba(0, 0, 0, .075);
+    }
+
+    /* CARD UPGRADE BUTTONS */
+
+    card .btn-upgrade {
+        position: absolute;
+        left: 0;
+        top: -8pt;
+        font-size: 8pt;
+        min-width: 16pt;
+        border-radius: 6px;
+        border: 2px solid var(--accent-ol);
+        color: white;
+        background: black;
+        padding: 2px 3px;
+        z-index: 9999;
+        transition: background-color .4s;
+    }
+
+    card .btn-upgrade:hover {
+        background-color: #454545;
+    }
+
+    card .btn-upgrade.nope {
+        background-color: red;
+    }
+
+    .icon-coin {
+        display: inline-block;
+        width: 1em;
+        height: 1em;
+        background-image: url("/img/lah-coin-inv.png");
+        background-size: 100% 100%;
+        background-repeat: no-repeat;
+        transform: translateY(.15em);
     }
 
     /* BLANK CARDS */
