--- a/web_content/css/lah-desktop.css
+++ b/web_content/css/lah-desktop.css
@@ -138,6 +138,10 @@ smaller {
     cursor: default;
 }
 
+.lah-spectating #player-list-area {
+    font-size: 1.25em;
+}
+
 #player-list-wrapper {
     width: 35%;
     max-width: 400px;
@@ -161,7 +165,7 @@ smaller {
 }
 
 #player-list-title {
-    font-size: 12pt;
+    font-size: 1em;
     font-weight: 600;
     margin: 0 3pt 2pt 0;
     text-align: right;
@@ -182,7 +186,7 @@ smaller {
 }
 
 .player-list-entry > * {
-    font-size: 12pt;
+    font-size: 1em;
     font-weight: 500;
     text-overflow: ellipsis;
     overflow: hidden;
@@ -348,6 +352,14 @@ smaller {
     overflow: hidden;
     white-space: nowrap;
     text-overflow: ellipsis;
+}
+
+.lah-spectating #status-area, .lah-spectating #status {
+    font-size: 1.5em;
+}
+
+#myname {
+    margin-left: 2px;
 }
 
 #status-area .stat.bare {
@@ -623,6 +635,14 @@ smaller {
     grid-column: c-start / c-center;
     justify-content: flex-end;
     align-items: center;
+}
+
+.lah-stage-playing.lah-spectating #black-card-area {
+    grid-row: r-start / r-end;
+    grid-column: c-start / c-end;
+    justify-content: center;
+    align-items: center;
+    transform: scale(1.5);
 }
 
 #game.lah-stage-judging #black-card-area {
