--- a/web_content/css/lah-mobile.css
+++ b/web_content/css/lah-mobile.css
@@ -4,8 +4,10 @@
     /* Cards have .715 w/h ratio */
 
     :root {
-        --card-width: 10.01rem;
-        --card-height: 14rem;
+        --card-scale: 2.25;
+        --card-width: calc(10vh * var(--card-scale));
+        --card-height: calc(14vh * var(--card-scale));
+        --card-font-size: 1.9vh;
         --card-border-radius: 14px;
         --card-padding: 1em;
         --final-score-row-height: 22pt;
@@ -167,32 +169,69 @@
         text-align: center;
     }
 
-    /* BLACK CARD AREA */
+    /* PROMPT AREA */
 
-    #black-card-area {
+    #prompt-area {
         grid-column: c-start / c-end;
         grid-row: r-start / r-center;
         display: flex;
         flex-direction: column;
         align-content: center;
         justify-content: flex-end;
-        position: relative;
         align-items: center;
     }
 
-    .lah-stage-playing:not(.lah-judge) #black-card-area card {
+    #black-card-area {
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+    }
+
+    card > .btn-skip {
+        position: absolute;
+        display: inline-block;
+        bottom: -2.5em;
+        left: 50%;
+        font-size: 12pt;
+        line-height: 1.02em;
+        font-weight: 600;
+        height: 1em;
+        transform: translateX(-50%);
+        background: none;
+        outline: none;
+        color: var(--accent-fg);
+        border: 2px solid var(--accent-fg);
+        box-sizing: content-box;
+        padding: 2px 8px;
+        border-radius: 3px;
+        text-rendering: optimizeSpeed;
+        -webkit-font-smoothing: subpixel-antialiased;
+        transition: opacity .1s ease;
+        opacity: .4;
+    }
+    
+    #game:not(.lah-stage-playing) .btn-skip {
+        display: none;
+    }
+    
+    card > .btn-skip:not(:disabled):hover {
+        border-color: var(--accent-fg);
+        opacity: 1;
+    }
+    
+    .lah-voted-skip card > .btn-skip {
+        color: var(--accent-skip);
+        border-color: var(--accent-skip);
+    }
+
+    .lah-stage-playing:not(.lah-judge) #prompt-area {
        margin-bottom: 12pt; 
     }
 
-    .lah-stage-playing.lah-judge #black-card-area {
+    .lah-stage-playing.lah-judge #prompt-area {
         grid-row: r-start / r-center;
         grid-column: c-start / c-end;
-    }
-
-    .lah-stage-playing.lah-judge #black-card-area card {
-        grid-row: r-start / r-end;
-        grid-column: c-start / c-end;
-        transform: scale(1);
     }
 
     /* JUDGE STATUS & MESSAGE AREAS */
@@ -202,8 +241,8 @@
         grid-row: r-center / r-end;
         grid-column: c-start / c-end;
         justify-self: center;
-        align-self: flex-start;
-        font-size: 11pt !important;
+        align-self: center;
+        font-size: 14pt !important;
     }
 
     #judge-message-body, #judge-message-body * {
@@ -216,14 +255,14 @@
         flex-direction: row;
         grid-row: r-center / r-end;
         grid-column: c-start / c-end;
-        justify-content: center;
+        justify-content: flex-end;
         align-items: center;
         transform: translateY(8pt);
+        margin: 16px;
         color: #888;
         pointer-events: none;
     }
 
-    #game.lah-stage-playing.lah-judge #judge-status-card-area,
     #game.lah-stage-playing.lah-judge #judge-message-area {
         display: flex;
     }
@@ -233,15 +272,16 @@
         flex-direction: row;
         justify-content: center;
         align-items: center;
-        width: var(--card-width);
-        height: var(--card-height);
+        --card-scale: .75;
+        width: calc(var(--card-width) * var(--card-scale));
+        height: calc(var(--card-height) * var(--card-scale));
         border-radius: var(--card-border-radius);
         border: 4px dashed #888;
         box-sizing: border-box;
     }
 
     #judge-status-card-text {
-        font-size: 64pt;
+        font-size: 36pt;
         font-weight: 600;
         text-align: center;
     }
@@ -730,7 +770,7 @@
         max-width: var(--card-width) !important;
         max-height: var(--card-height) !important;
         min-height: var(--card-height) !important;
-        font-size: 11pt;
+        font-size: var(--card-font-size);
     }
 
     card.collapse {
@@ -976,13 +1016,13 @@
         }
         to {
             opacity: 1;
-            transform: translate(-50%, calc(-100% - 8pt));
+            transform: translate(-50%, -60%);
         }
     }
     
     card[data-selection]::after {
         content: attr(data-selection);
-        transform: translate(-50%, calc(-100% - 8pt));
+        transform: translate(-50%, -60%);
         position: absolute;
         top: 0;
         left: 50%;
