--- a/web_content/css/lah-mobile.css
+++ b/web_content/css/lah-mobile.css
@@ -27,6 +27,10 @@
         height: 100vh;
         text-size-adjust: 100%;
     }
+
+    .desktop-only {
+        display: none !important;
+    }
     
     .disabled {
         opacity: .35;
